--- a/website/ninja.css
+++ b/website/ninja.css
@@ -19,12 +19,16 @@ body {
     color: red;
 }
 
+.rowdiv {
+    overflow: auto;
+}
+
 .box_left {
     width: 240px;
-    height: 60px;
     border: 3px;
     border-style: solid;
     border-radius: 6px;
+    padding-bottom: 9px;
     float: left;
     margin-bottom: 30px;
 }
@@ -45,10 +49,10 @@ body {
 
 .box_right {
     width: 240px;
-    height: 60px;
     border: 3px;
     border-style: solid;
     border-radius: 6px;
+    padding-bottom: 9px;
     float: right;
     margin-bottom: 30px;
 }
