--- a/website/ninja.css
+++ b/website/ninja.css
@@ -23,6 +23,16 @@ body {
     overflow: auto;
 }
 
+.box_full {
+    width: 594px;
+    border: 3px;
+    border-style: solid;
+    border-radius: 6px;
+    padding-bottom: 9px;
+    float: left;
+    margin-bottom: 30px;
+}
+
 .box_left {
     width: 240px;
     border: 3px;
@@ -60,7 +70,6 @@ body {
     height: 30px;
     color: black;
     text-align: center;
-    font-weight: bold;
     font-size: 19px;
     font-family: 'Dosis', sans-serif;
 }
@@ -73,11 +82,38 @@ body {
     font-family: 'Dosis', sans-serif;
 }
 
+.package_description {
+    border: 3px;
+    border-style: solid;
+    border-radius: 6px;
+    text-align: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: white;
+    opacity: 0.5;
+    margin-left: 9px;
+    margin-right: 9px;
+    color: black;
+}
+.bold {
+    font-weight: bold;
+}
 .clear {
     border: 0px
 }
-.column_titles {
+.column_titles_center {
     text-align: center;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+}
+.column_titles_left {
+    text-align: left;
+    font-size: 18px;
+    font-family: 'Dosis', sans-serif;
+}
+.column_titles_right {
+    float: right;
+    text-align: right;
     font-size: 18px;
     font-family: 'Dosis', sans-serif;
 }
@@ -85,6 +121,9 @@ body {
 
 .red {
     color: #ee3b24;
+}
+.redborderlight {
+    border-color: #f7a398;
 }
 .redbackground {
     background-color: #ee3b24;
