--- a/website/ninja.css
+++ b/website/ninja.css
@@ -1,5 +1,7 @@
 body {
-    background-color: #ccc;
+    background-image: url("images/linen_bg_tile.jpg");
+    background-repeat: repeat;
+    background-color: cccccc;
 }
 
 .main_centered {
