--- a/website/ninja.css
+++ b/website/ninja.css
@@ -224,3 +224,34 @@ body {
 .indigobackgroundlight {
     background-color: #9297ac;
 }
+
+
+
+
+
+
+
+
+
+
+/* unvisited link */
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+    color: #1b9dd0;
+}
+
+/* selected link */
+a:active {
+    color: #1f4389;
+}
